Fix git implementation.